--- a/CURSO-HTML5/index.html
+++ b/CURSO-HTML5/index.html
@@ -5,7 +5,21 @@
         <title>Daniel Gama</title>
     </head>
     <body>
-        Daniel Gama
+        <header>
+            <h1>Daniel Gama</h1>
+
+        </header>
+        <section>
+            <header>
+                <h2>Posts</h2>
+            </header>
+            <article>
+                <header>
+                    <h3>Post #1</h3>
+                </header>
+            </article>
+        </section>
+        <footer></footer>
     </body>
 
 </html>
