Adicionado tags sobre texto

--- a/CURSO-HTML5/index.html
+++ b/CURSO-HTML5/index.html
@@ -17,6 +17,13 @@
                 <header>
                     <h3>Post #1</h3>
                 </header>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Neque adipisci dolore placeat, totam magnam cupiditate 
+                    sit explicabo magni voluptatibus at accusamus aperiam? 
+                    Quam repudiandae ipsam a laudantium iste. Nemo, maxime!
+                    <a href="https://www.linkedin.com/in/daniel-gama-384b5692/" target="_blank"> Daniel Gama </a>
+                </p>
             </article>
         </section>
         <footer></footer>
