Adicionado imagens e melhorardo o codigo do site pesoal do curso

--- a/CURSO-HTML5/index.html
+++ b/CURSO-HTML5/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <h1>Daniel Gama</h1>
-
+            <img height="100px" src="img/male.png" alt="Imagem de um avatar masculino">
         </header>
         <section>
             <header>
@@ -16,6 +16,7 @@
             <article>
                 <header>
                     <h3>Post #1</h3>
+                    <img height="150px" width="300px"   src="img/Fundo.jpg" alt="Bola de vido ssobre um teclado refletindo leds rgb">
                 </header>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
