feat: Adicionado a folha de estilo ao projeto e estilizado as os primeiros componentes

--- a/HTML5-CSS3/index.html
+++ b/HTML5-CSS3/index.html
@@ -3,19 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>Daniel Gama</title>
+        <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
         <header>
-            <h1>Daniel Gama</h1>
+            
             <img height="100px" src="img/male.png" alt="Imagem de um avatar masculino">
+            <h1 id="title">Daniel Gama</h1>
         </header>
         <section>
             <header>
-                <h2>Posts</h2>
+                <h2 class="subtitle">Posts</h2>
             </header>
             <article>
                 <header>
-                    <h3>Post #1</h3>
+                    <h3 class="post_title">Post #1</h3>
                     <img height="150px" width="300px"   src="img/Fundo.jpg" alt="Bola de vido ssobre um teclado refletindo leds rgb">
                 </header>
                 <p>
@@ -27,7 +29,19 @@
                 </p>
             </article>
         </section>
-        <footer></footer>
+        <footer>
+            <ul>
+                <li>
+                    <a href="mailto:danielgama1@live.com" target="_blank">danielgama1@live.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/daniel-gama-384b5692/" target="_blank">Linkedin</a>
+                </li>
+                <li>
+                    <a href="https://github.com/DanielGalves" target="_blank">GitHub</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 
 </html>
