feat: Finalizado a estilização do projeto proposto no curso de html5 e CSS3

--- a/HTML5-CSS3/index.html
+++ b/HTML5-CSS3/index.html
@@ -30,7 +30,7 @@
             </article>
         </section>
         <footer>
-            <ul>
+            <ul class="contacts_list">
                 <li>
                     <a href="mailto:danielgama1@live.com" target="_blank">danielgama1@live.com</a>
                 </li>
