feat: refatorado o codigo do arquivo index e criado o arquivo script na pasta Script

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Meu Primeiro Script</h1>
-    <script>
-        alert("Ola Mundo!!!");
-    </script>
+
+
+    
+    <script src="Script/script.js"></script>    
 </body>
 </html>
