feat: Inserido imagens e estilisado a lista dos pokemons

--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -25,21 +25,32 @@
         <ol class="pokemons">
             <li class="grama">
                 Bulbasaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
             </li>
             <li class="grama">
                 Yvisaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg" alt="Yvisaur">
+
             </li>
             <li class="grama">
                 Venusaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg" alt="Venusaur">
+
             </li>
             <li class="fire">
                 Charmander
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
+
             </li>
             <li class="fire">
                 Charmeleon
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmeleon">
+
             </li>
             <li class="fire">
                 Charizard
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizard">
+
             </li>
 
         </ol>
