--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -25,23 +25,13 @@
     <section class="content">
         <h1>Pokedex</h1>
 
-        <ol class="pokemons">
-            <li class="pokemon">
-                <span class="number"><strong>#001</strong></span>
-                <span class="name">Bulbasaur</span>
-
-                    <div class="detail">
-                        <ol class="types">
-                            <li class="type">grass</li>
-                            <li class="type">poison</li>
-                        </ol>
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
-                    </div>
-            </li>
+        <ol id="pokemonList"   class="pokemons">
+           
         </ol>
     </section>
 
     <!--Nosso JS-->
-   <script src="/Pokedex/assets/js/main.js"></script>
+    <script src="/Pokedex/assets/js/poke-api.js"></script>
+    <script src="/Pokedex/assets/js/main.js"></script>
 </body>
 </html>
