--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -31,6 +31,7 @@
     </section>
 
     <!--Nosso JS-->
+    <script src="/Pokedex/assets/js/pokemon-model.js"></script>
     <script src="/Pokedex/assets/js/poke-api.js"></script>
     <script src="/Pokedex/assets/js/main.js"></script>
 </body>
