--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -28,6 +28,12 @@
         <ol id="pokemonList"   class="pokemons">
            
         </ol>
+        <div class="pagination">
+            <button id="loadMoreButton" type="button">
+                Load More
+            </button>
+        </div>
+        
     </section>
 
     <!--Nosso JS-->
