aprendendo a criar Prop

--- a/Components-frontend/index.html
+++ b/Components-frontend/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KonohaNews</title>
-    <link rel="stylesheet" href="/src/styles/card.css">
-    <script src="/src/Components/CardNews.js" defer></script>
+    <link rel="stylesheet" href="/Components-frontend/src/styles/card.css">
+    <script src="/Components-frontend/src/Components/CardNews.js" defer></script>
+    <script src="/Components-frontend/src/Components/TituloDinamico.js" defer></script>
 </head>
 <body>
 
@@ -18,11 +19,12 @@
                 <p>Naruto está contratando desenvolvedores que trabalhem com components</p>
             </div>
             <div class="card_rigth">
-                <img src="/assets/naruto.jpg" alt="Foto do Naruto">
+                <img src="/Components-frontend/assets/naruto.jpg" alt="Foto do Naruto">
             </div>
        </div>    
     </div>
     <card-news></card-news>
+    <titulo-dinamico titulo="Noticia Urgente"></titulo-dinamico>
     
 
 </body>
