pegando as Props dos sub elementos do component

--- a/Components-frontend/index.html
+++ b/Components-frontend/index.html
@@ -23,7 +23,14 @@
             </div>
        </div>    
     </div>
-    <card-news></card-news>
+    <card-news
+        autor="Daniel"
+        title=" Naruto Contrata"
+        content="Naruto está contratando desenvolvedores que trabalhem com components"
+        srcImage = "/Components-frontend/assets/naruto.jpg"
+        href_link = "#"
+    >
+</card-news>
     <titulo-dinamico titulo="Noticia Urgente"></titulo-dinamico>
     
 
